--- a/SimpleBlog/Views/Categories/Details.cshtml
+++ b/SimpleBlog/Views/Categories/Details.cshtml
@@ -4,35 +4,15 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-    </dl>
+<div class="row">
+    <div class="col-md-5 col-sm-12">
+        <h1> @Html.DisplayFor(model => model.Name)</h1>
+        <h3> @Html.DisplayFor(model => model.Description)</h3>
+    </div>
+    <div class="col-md-5 lead top-margin">
+            @Html.ActionLink("Back to Categories", "Index")
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-
 <table class="table">
     <tr>
         <th>
@@ -57,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Content)
+                @Html.DisplayFor(modelItem => item.DatePosted)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
