--- a/SimpleBlog/Views/Categories/Details.cshtml
+++ b/SimpleBlog/Views/Categories/Details.cshtml
@@ -13,38 +13,5 @@
             @Html.ActionLink("Back to Categories", "Index")
     </div>
 </div>
-<table class="table">
-    <tr>
-        <th>
-            Author
-        </th>
-        <th>
-            Title
-        </th>
-        <th>
-            Date Posted
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model.Posts)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.AuthorName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DatePosted)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
-    }
-
-</table>
+@Html.Partial("~/Views/Posts/_PostsEmbeddedIndex.cshtml", Model.Posts.OrderByDescending(m => m.DatePosted))
