--- a/SimpleBlog/Views/Comments/_CommentCreate.cshtml
+++ b/SimpleBlog/Views/Comments/_CommentCreate.cshtml
@@ -35,8 +35,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CommentText, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CommentText, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CommentText, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.CommentText,  new { @class = "form-control col-md-6", @rows = 5 })
+                @Html.ValidationMessageFor(model => model.CommentText, "", new { @class = "text-danger"})
             </div>
         </div>
 
@@ -51,7 +51,3 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
