Don't use SA account, even on a junk database.
Also cleaned up a typo and cleaned up the layout page.

--- a/SimpleBlog/Views/Posts/Create.cshtml
+++ b/SimpleBlog/Views/Posts/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to Ppsts", "Index")
+    @Html.ActionLink("Back to Posts", "Index")
 </div>
 
 @section Scripts {
